--- a/overrides/main.html
+++ b/overrides/main.html
@@ -3,7 +3,7 @@
 {% block header %}
   <div class="k9-topbar">
     <div class="k9-topbar__inner">
-      ⚠️ Notice: Shibarium products shut down Feb 25, 2026. Remove tokens before then.
+      ⚠️ Notice: K9 products were shut down on Feb 25, 2026 due to the Shibarium hack.
       <a href="https://snapshot.box/#/s:k9safe.eth/proposal/0x952ffa3317c173e72b4ee38cd3075ac47f661996d8a23c29487d1b40a984dd91" target="_blank" rel="noopener">Learn more</a>
     </div>
   </div>
